--- a/ProjectVIFON/ProjectVIFON.vcxproj
+++ b/ProjectVIFON/ProjectVIFON.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Config.cpp" />
     <ClCompile Include="Food.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -147,6 +148,7 @@
     <ClCompile Include="WorldObject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Config.h" />
     <ClInclude Include="dormTEX.h" />
     <ClInclude Include="Food.h" />
     <ClInclude Include="constants.h" />
